--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,4 +1,8 @@
-.header  {
+.header {
+  display: flex;
+  flex: auto;
+  justify-content: space-around;
+  align-items: center;
   font-family: monospace;
   background: papayawhip;
 }
@@ -9,11 +13,16 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px auto;
 }
 
 ul {
+  display: flex;
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  gap: 12px;
 }
 
 a {
