--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,7 +1,5 @@
 .header {
   display: flex;
-  flex: auto;
-  justify-content: space-around;
   align-items: center;
   font-family: monospace;
   background: papayawhip;
@@ -20,9 +18,13 @@ ul {
   display: flex;
   /* this removes the dots on the list items*/
   list-style-type: none;
-  padding-left: 10px;
+  padding-left: 0px;
   padding-right: 10px;
   gap: 12px;
+}
+
+button {
+  margin-right: 0;
 }
 
 a {
