--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,14 +9,25 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background: white;
   border-bottom: 1px solid #ddd;
-  box-shadow: 0 0 8px rgba(0,0,0,.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .1);
+  padding: 8px;
+}
+
+.top-left,
+.top-right {
+  display: flex;
+  gap: 8px;
 }
 
 .profile-image {
+  display: flex;
   background: rebeccapurple;
-  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+  box-shadow: inset 2px 2px 4px rgba(0, 0, 0, .5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
@@ -27,6 +38,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-left: 8px;
 }
 
 button {
@@ -44,5 +56,8 @@ a {
 }
 
 ul {
+  display: flex;
+  padding-left: 8px;
   list-style-type: none;
+  gap: 16px;
 }
